--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ dependencies = [
     "matplotlib>=3.6.2",
     "jupyterlab-code-formatter>=1.5.3",
     "isort>=5.10.1",
+    "torch>=1.13.0",
+    "torchvision>=0.14.0",
+    "torchaudio>=0.13.0",
 ]
 requires-python = ">=3.9"
 license = {text = "MIT"}
