--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "torchvision>=0.14.0",
     "torchaudio>=0.13.0",
     "torchinfo>=1.7.1",
+    "scikit-learn>=1.1.3",
 ]
 requires-python = ">=3.9"
 license = {text = "MIT"}
