--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "torchaudio>=0.13.0",
     "torchinfo>=1.7.1",
     "scikit-learn>=1.1.3",
+    "seaborn>=0.12.2",
 ]
 requires-python = ">=3.9"
 license = {text = "MIT"}
