--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ dependencies = [
     "torchinfo>=1.7.1",
     "scikit-learn>=1.1.3",
     "seaborn>=0.12.2",
+    "tensorboard>=2.10.1",
+    "pydot>=1.4.2",
 ]
 requires-python = ">=3.9"
 license = {text = "MIT"}
