feat: add cnn cats vs dogs tf

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "seaborn>=0.12.2",
     "tensorboard>=2.10.1",
     "pydot>=1.4.2",
+    "kaggle>=1.5.12",
 ]
 requires-python = ">=3.9"
 license = {text = "MIT"}
