--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,3 +35,4 @@ build-backend = "pdm.pep517.api"
 [tool.pdm.scripts]
 data_cats_vs_dogs = "./scripts/data/cats_vs_dogs.sh"
 data_pets = "./scripts/data/pets.sh"
+data_jena_climate = "./scripts/data/jena_climate.sh"
