feat: add imdb review with n-gram

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,3 +36,4 @@ build-backend = "pdm.pep517.api"
 data_cats_vs_dogs = "./scripts/data/cats_vs_dogs.sh"
 data_pets = "./scripts/data/pets.sh"
 data_jena_climate = "./scripts/data/jena_climate.sh"
+data_imdb = "./scripts/data/imdb.sh"
