feat: add imdb review with sequence

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,3 +37,4 @@ data_cats_vs_dogs = "./scripts/data/cats_vs_dogs.sh"
 data_pets = "./scripts/data/pets.sh"
 data_jena_climate = "./scripts/data/jena_climate.sh"
 data_imdb = "./scripts/data/imdb.sh"
+data_glove = "./scripts/data/glove.sh"
