feat: add sequence to sequence translation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,3 +38,4 @@ data_pets = "./scripts/data/pets.sh"
 data_jena_climate = "./scripts/data/jena_climate.sh"
 data_imdb = "./scripts/data/imdb.sh"
 data_glove = "./scripts/data/glove.sh"
+data_spa_eng = "./scripts/data/spa_eng.sh"
