--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "opencv-python>=4.7.0.72",
     # FIXME: use the pypi when 1.0 released
     "towhee @ git+https://github.com/towhee-io/towhee.git@main",
+    "towhee.models>=0.9.0",
 ]
 requires-python = ">=3.9"
 license = {text = "MIT"}
@@ -45,3 +46,5 @@ data_imdb = "./scripts/data/imdb.sh"
 data_glove = "./scripts/data/glove.sh"
 data_spa_eng = "./scripts/data/spa_eng.sh"
 data_reverse_image_search = "./scripts/data/reverse_image_search.sh"
+data_msrvtt = "./scripts/data/msrvtt.sh"
+
