--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "torchvision>=0.14.0",
     "torchaudio>=0.13.0",
     "torchinfo>=1.7.1",
-    "scikit-learn>=1.1.3",
+    "scikit-learn>=1.2.2",
     "seaborn>=0.12.2",
     "tensorboard>=2.10.1",
     "pydot>=1.4.2",
@@ -28,6 +28,8 @@ dependencies = [
     # FIXME: use the pypi when 1.0 released
     "towhee @ git+https://github.com/towhee-io/towhee.git@main",
     "towhee.models>=0.9.0",
+    "bentoml>=1.0.15",
+    "pandas>=1.5.3",
 ]
 requires-python = ">=3.9"
 license = {text = "MIT"}
