--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,9 @@ dependencies = [
     "towhee.models>=0.9.0",
     "bentoml>=1.0.15",
     "pandas>=1.5.3",
+    "openai>=0.27.5",
+    "redlines>=0.2.2",
+    "panel>=0.14.4",
 ]
 requires-python = ">=3.9"
 license = {text = "MIT"}
