--- a/pyproject.toml
+++ b/pyproject.toml
@@ -52,4 +52,5 @@ data_glove = "./scripts/data/glove.sh"
 data_spa_eng = "./scripts/data/spa_eng.sh"
 data_reverse_image_search = "./scripts/data/reverse_image_search.sh"
 data_msrvtt = "./scripts/data/msrvtt.sh"
+ask_gpt = "./scripts/ask_gpt.py"
 
