--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,12 +25,11 @@ dependencies = [
     "pymilvus>=2.2.4",
     "gradio>=3.20.0",
     "opencv-python>=4.7.0.72",
-    # FIXME: use the pypi when 1.0 released
-    "towhee @ git+https://github.com/towhee-io/towhee.git@main",
+    "towhee>=1.1.0",
     "towhee.models>=0.9.0",
     "bentoml>=1.0.15",
     "pandas>=1.5.3",
-    "openai>=0.27.5",
+    "openai>=0.27.8",
     "redlines>=0.2.2",
     "panel>=0.14.4",
     "langchain>=0.0.158",
