--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,5 +57,6 @@ data_spa_eng = "./scripts/data/spa_eng.sh"
 data_reverse_image_search = "./scripts/data/reverse_image_search.sh"
 data_msrvtt = "./scripts/data/msrvtt.sh"
 data_gtzan = "./scripts/data/gtzan.sh"
+data_kolena = "./scripts/data/kolena_doc.sh"
 ask_gpt = "./scripts/ask_gpt.py"
 
