--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,13 +37,15 @@ dependencies = [
     "tiktoken>=0.3.3",
     "docarray>=0.35.0",
     "wikipedia>=1.4.0",
+    "fiftyone>=0.21.6",
+    "kaleido==0.2.1",
 ]
 requires-python = ">=3.9"
 license = {text = "MIT"}
 
 [build-system]
-requires = ["pdm-pep517>=1.0.0"]
-build-backend = "pdm.pep517.api"
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
 
 [tool]
 [tool.pdm]
