--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "wikipedia>=1.4.0",
     "fiftyone>=0.21.6",
     "kaleido==0.2.1",
+    "deepchecks[vision]>=0.17.4",
 ]
 requires-python = ">=3.9"
 license = {text = "MIT"}
