chore: add baserun quickstart

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,8 @@ dependencies = [
     "fiftyone>=0.21.6",
     "kaleido==0.2.1",
     "deepchecks[vision]>=0.17.4",
+    "baserun>=0.5.2",
+    "pytest>=7.4.1",
 ]
 requires-python = ">=3.9"
 license = {text = "MIT"}
