--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,8 @@ dependencies = [
     "deepchecks[vision]>=0.17.4",
     "baserun>=0.5.2",
     "pytest>=7.4.1",
+    "sacrebleu>=2.3.1",
+    "nltk>=3.8.1",
 ]
 requires-python = ">=3.9"
 license = {text = "MIT"}
