--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,12 +27,12 @@ dependencies = [
     "towhee.models>=0.9.0",
     "bentoml>=1.0.15",
     "pandas>=1.5.3",
-    "openai>=0.27.8",
+    "openai>=0.28.1",
     "redlines>=0.2.2",
     "panel>=0.14.4",
     "langchain>=0.0.227",
     "chromadb>=0.3.21",
-    "tiktoken>=0.3.3",
+    "tiktoken>=0.5.1",
     "docarray>=0.35.0",
     "wikipedia>=1.4.0",
     "fiftyone>=0.21.6",
@@ -42,6 +42,8 @@ dependencies = [
     "pytest>=7.4.1",
     "sacrebleu>=2.3.1",
     "nltk>=3.8.1",
+    "pgvector>=0.2.3",
+    "psycopg2-binary>=2.9.9",
 ]
 requires-python = ">=3.9"
 license = { text = "MIT" }
@@ -66,3 +68,4 @@ data_kolena = "./scripts/data/kolena_doc.sh"
 ask_gpt = "./scripts/ask_gpt.py"
 langchain_cli = "ml_playground/langchain/search_index.py --memory"
 langchain_gui = "panel serve ml_playground/langchain/gui.py --autoreload --show"
+lint = "black ml_playground/"
