feat(mlops): add keras tuner

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,3 +69,4 @@ ask_gpt = "./scripts/ask_gpt.py"
 langchain_cli = "ml_playground/langchain/search_index.py --memory"
 langchain_gui = "panel serve ml_playground/langchain/gui.py --autoreload --show"
 lint = "black ml_playground/"
+jupyter = "jupyter lab"
