--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 description = ""
 authors = [{ name = "Yifan Wu", email = "tyivanwu@gmail.com" }]
 dependencies = [
-    "tensorflow-macos>=2.10.0",
-    "tensorflow-metal>=0.6.0",
+    "tensorflow-macos==2.9.0",
+    "tensorflow-metal==0.5.0",
     "jupyterlab>=3.5.0",
     "black>=22.10.0",
     "matplotlib>=3.6.2",
@@ -17,7 +17,7 @@ dependencies = [
     "torchinfo>=1.7.1",
     "scikit-learn>=1.2.2",
     "seaborn>=0.12.2",
-    "tensorboard>=2.10.1",
+    "tensorboard",
     "pydot>=1.4.2",
     "kaggle>=1.5.12",
     "pymilvus>=2.2.4",
@@ -44,8 +44,9 @@ dependencies = [
     "nltk>=3.8.1",
     "pgvector>=0.2.3",
     "psycopg2-binary>=2.9.9",
+    "shap>=0.44.0",
 ]
-requires-python = ">=3.9"
+requires-python = ">=3.9,<3.11"
 license = { text = "MIT" }
 
 [build-system]
