--- a/bentoml/bentofile.yaml
+++ b/bentoml/bentofile.yaml
@@ -3,8 +3,10 @@ labels:
   owner: bentoml-team
   stage: dev
 include:
-  - "*.py" # A pattern for matching which files to include in the bento
+  - "*.py" # A pattern for matching which files to include in the Bento
 python:
-  packages: # Additional pip packages required by the service
+  packages: # Additional pip packages required by the Service
     - scikit-learn
     - pandas
+models: # The model to be used for building the Bento.
+  - iris_clf:latest
