--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ dependencies = [
     "pgvector>=0.2.3",
     "psycopg2-binary>=2.9.9",
     "shap>=0.44.0",
+    "librosa>=0.10.1",
 ]
 requires-python = ">=3.9,<3.11"
 license = { text = "MIT" }
